--- a/barry-portfolio/package.json
+++ b/barry-portfolio/package.json
@@ -56,7 +56,6 @@
     "recharts": "2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -66,6 +65,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
