--- a/barry-portfolio/wrangler.jsonc
+++ b/barry-portfolio/wrangler.jsonc
@@ -14,7 +14,7 @@
   },
   "observability": {
     "enabled": true
-  }
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -49,4 +49,10 @@
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
    */
   // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+  "routes": [
+    {
+      "pattern": "barryhmolina.com",
+      "custom_domain": true
+    }
+  ]
 }
