--- a/barry-portfolio/package.json
+++ b/barry-portfolio/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.4",
     "@opennextjs/cloudflare": "^1.3.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "2.1.7",
@@ -20,6 +23,7 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-toast": "1.2.14",
     "@radix-ui/react-tooltip": "1.2.7",
+    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
