--- a/barry-portfolio/package.json
+++ b/barry-portfolio/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.4.2",
     "lucide-react": "^0.515.0",
+    "motion": "^12.18.1",
     "next": "15.3.3",
     "next-themes": "^0.4.4",
     "react": "^19",
